Fixed mobile layout issues (css rule height: 100vh makes the element's height be that of the phone screen, even if the browser is not full screen, so when the browser's top navigation bar is visible, the document was always scrolling up or down ~50 px which was so annoying

--- a/ParcelWs/apps/trmrk-notes-lithtmlapp/src/trmrk-lithtml/styles/style.core.scss
+++ b/ParcelWs/apps/trmrk-notes-lithtmlapp/src/trmrk-lithtml/styles/style.core.scss
@@ -1,9 +1,9 @@
 html {
-  min-height: 100vh;
+  height: 100%;
 }
 
 body {
-  height: 100vh;
+  height: 100%;
   margin: 0;
   padding: 0;
   position: relative;
